--- a/static/app/basic/card.html
+++ b/static/app/basic/card.html
@@ -40,7 +40,7 @@
                                 <th>截止日期</th>
                                 <td>
                                     <div class="input-group date  form_datetime " style="float: left">
-                                        <input type="text" size="16" style="height: 35px" name="expiryDate" readonly
+                                        <input type="text" size="16" style="height: 35px" name="expiryDate"
                                                class="form-control input-small inline"/>
                                         <span class="input-group-btn">
                                         <button class="btn default date-set" type="button">
@@ -105,7 +105,7 @@
                                 <th>截止日期</th>
                                 <td>
                                     <div class="input-group date  form_datetime " style="float: left">
-                                        <input type="text" size="16" style="height: 35px" name="expiryDate" readonly
+                                        <input type="text" size="16" style="height: 35px" name="expiryDate"
                                                class="form-control input-small inline"/>
                                         <span class="input-group-btn">
                                         <button class="btn default date-set" type="button">
@@ -282,7 +282,7 @@
             if(ret!=undefined){
                 return ret.userName;
             }else{
-                Shinez.tip('warning',`当前用户Id=${val}不存在于用户信息中`)
+                //Shinez.tip('warning',`当前用户Id=${val}不存在于用户信息中`)
                 return '-'
 
             }
