--- a/static/app/basic/device.html
+++ b/static/app/basic/device.html
@@ -34,7 +34,7 @@
                                 <th>设备最后使用期限</th>
                                 <td>
                                     <div class="input-group date  form_datetime " style="float: left">
-                                        <input type="text" size="16" style="height: 35px" name="expiryDate" readonly
+                                        <input type="text" size="16" style="height: 35px" name="expiryDate"
                                                class="form-control input-small inline"/>
                                         <span class="input-group-btn">
                                         <button class="btn default date-set" type="button">
@@ -92,7 +92,7 @@
                                 <th>设备最后使用期限</th>
                                 <td>
                                     <div class="input-group date  form_datetime " style="float: left">
-                                        <input type="text" size="16" style="height: 35px" name="expiryDate" readonly
+                                        <input type="text" size="16" style="height: 35px" name="expiryDate"
                                                class="form-control input-small inline"/>
                                         <span class="input-group-btn">
                                         <button class="btn default date-set" type="button">
@@ -152,7 +152,7 @@
             <th>设备状态</th>
             <th>是否报修</th>
             <th>总共使用次数</th>
-            <th>总共使用次数</th>
+            <th>最后使用期限</th>
         </tr>
         </thead>
         <tbody>
